added the new icons

--- a/alarme/devis-alarme.html
+++ b/alarme/devis-alarme.html
@@ -90,6 +90,113 @@
         </div>
     </section>
 
+    <!-- Question Section 2B - Business Type (Hidden by default, only for entreprise) -->
+    <section class="question-section" id="question-2b" style="display: none;">
+        <h1 class="question-title">Quel type de local souhaitez-vous équiper ?</h1>
+
+        <div class="choice-cards business-cards">
+            <div class="choice-card" data-choice="commerce">
+                <div class="card-icon-wrapper">
+                    <img src="icon/warehouse.svg" alt="Commerce" class="card-icon-img">
+                </div>
+                <span class="card-text">Commerce</span>
+            </div>
+
+            <div class="choice-card" data-choice="bar-restaurant">
+                <div class="card-icon-wrapper">
+                    <img src="icon/restaurant.svg" alt="Bar ou restaurant" class="card-icon-img">
+                </div>
+                <span class="card-text">Bar ou restaurant</span>
+            </div>
+
+            <div class="choice-card" data-choice="cabinet-medical">
+                <div class="card-icon-wrapper">
+                    <img src="icon/Cabinet-médical.svg" alt="Bureau ou cabinet médical" class="card-icon-img">
+                </div>
+                <span class="card-text">Bureau ou cabinet médical</span>
+            </div>
+
+            <div class="choice-card" data-choice="atelier-entrepot">
+                <div class="card-icon-wrapper">
+                    <img src="icon/beauty-salon.svg" alt="Atelier ou entrepôt" class="card-icon-img">
+                </div>
+                <span class="card-text">Atelier ou entrepôt</span>
+            </div>
+
+            <div class="choice-card" data-choice="local-administratif">
+                <div class="card-icon-wrapper">
+                    <img src="icon/alarme-salledesport.svg" alt="Local administratif, sportif ou éducatif" class="card-icon-img">
+                </div>
+                <span class="card-text">Local administratif, sportif ou éducatif</span>
+            </div>
+
+            <div class="choice-card" data-choice="autre">
+                <div class="card-icon-wrapper">
+                    <img src="icon/alarme-professionels-entreprise.svg" alt="Autre" class="card-icon-img">
+                </div>
+                <span class="card-text">Autre</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Question Section 2C - Entry Points for Business (Hidden by default, only for entreprise) -->
+    <section class="question-section" id="question-2c" style="display: none;">
+        <h1 class="question-title">Combien de points d'accès votre local possède-t-il ?</h1>
+        <p class="question-subtitle">Portes et fenêtres principales</p>
+
+        <div class="choice-cards">
+            <div class="choice-card" data-choice="1-2">
+                <div class="card-icon-wrapper">
+                    <img src="icon/points-d'accès-alarme.svg" alt="1-2 points d'accès" class="card-icon-img">
+                </div>
+                <span class="card-text">1-2 points d'accès</span>
+            </div>
+
+            <div class="choice-card" data-choice="3-4">
+                <div class="card-icon-wrapper">
+                    <img src="icon/points-d'accès-alarme.svg" alt="3-4 points d'accès" class="card-icon-img">
+                </div>
+                <span class="card-text">3-4 points d'accès</span>
+            </div>
+
+            <div class="choice-card" data-choice="5+">
+                <div class="card-icon-wrapper">
+                    <img src="icon/points-d'accès-alarme.svg" alt="5+ points d'accès" class="card-icon-img">
+                </div>
+                <span class="card-text">5+ points d'accès</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Question Section 2D - Entry Points for Habitation (Hidden by default) -->
+    <section class="question-section" id="question-2d" style="display: none;">
+        <h1 class="question-title">Combien de points d'accès possédez-vous ?</h1>
+        <p class="question-subtitle">Portes et fenêtres principales</p>
+
+        <div class="choice-cards">
+            <div class="choice-card" data-choice="1-2">
+                <div class="card-icon-wrapper">
+                    <img src="icon/points-d'accès-alarme.svg" alt="1-2 points d'accès" class="card-icon-img">
+                </div>
+                <span class="card-text">1-2 points d'accès</span>
+            </div>
+
+            <div class="choice-card" data-choice="3-4">
+                <div class="card-icon-wrapper">
+                    <img src="icon/points-d'accès-alarme.svg" alt="3-4 points d'accès" class="card-icon-img">
+                </div>
+                <span class="card-text">3-4 points d'accès</span>
+            </div>
+
+            <div class="choice-card" data-choice="5+">
+                <div class="card-icon-wrapper">
+                    <img src="icon/points-d'accès-alarme.svg" alt="5+ points d'accès" class="card-icon-img">
+                </div>
+                <span class="card-text">5+ points d'accès</span>
+            </div>
+        </div>
+    </section>
+
     <!-- Question Section 3 (Hidden by default) -->
     <section class="question-section" id="question-3" style="display: none;">
         <h1 class="question-title">Souhaitez-vous protéger l'extérieur de votre maison ?</h1>
