--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
                 <div class="nav-dropdown">
                     <a href="#services" class="nav-link dropdown-toggle">Services</a>
                     <div class="dropdown-menu">
+                        <a href="alarme/installation-alarme-montpellier.html" class="dropdown-item">Installation Alarme</a>
                         <a href="services/installateur-videosurveillance-entrepots-montpellier.html" class="dropdown-item">Surveillance Entrepôts</a>
                         <a href="interphone-montpellier/installation-interphone-montpellier.html" class="dropdown-item">Installation Interphone</a>
                     </div>
@@ -1658,6 +1659,7 @@
         <div class="mobile-dropdown">
             <button class="nav-link mobile-dropdown-toggle">Services</button>
             <div class="mobile-dropdown-menu">
+                <a href="alarme/installation-alarme-montpellier.html" class="mobile-dropdown-item">Installation Alarme</a>
                 <a href="services/videosurveillance.html" class="mobile-dropdown-item">Vidéosurveillance</a>
                 <a href="services/installateur-videosurveillance-entrepots-montpellier.html" class="mobile-dropdown-item">Surveillance Entrepôts</a>
                 <a href="interphone-montpellier/installation-interphone-montpellier.html" class="mobile-dropdown-item">Installation Interphone</a>
