--- a/alarme/devis-alarme.html
+++ b/alarme/devis-alarme.html
@@ -21,7 +21,7 @@
     <div class="devis-banner">
         <div class="banner-container">
             <!-- Centered Logo -->
-            <a href="../index.html" class="banner-logo">
+            <a href="installation-alarme-montpellier.html" class="banner-logo">
                 <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité" class="banner-logo-img">
             </a>
         </div>
@@ -218,8 +218,28 @@
         </div>
     </section>
 
-    <!-- Postal Code Section (TEMPORARILY REMOVED - WILL RE-ADD LATER) -->
-    <!--
+    <!-- Question Section 4 - Telesurveillance (Hidden by default) -->
+    <section class="question-section" id="question-4" style="display: none;">
+        <h1 class="question-title">Souhaitez-vous ajouter la télésurveillance ?</h1>
+
+        <div class="choice-cards">
+            <div class="choice-card" data-choice="oui">
+                <div class="card-icon-wrapper">
+                    <img src="icon/télésurveillance-montpellier.svg" alt="Oui" class="card-icon-img">
+                </div>
+                <span class="card-text">Oui</span>
+            </div>
+
+            <div class="choice-card" data-choice="non">
+                <div class="card-icon-wrapper">
+                    <img src="icon/no-télésurveillance-montpellier.svg" alt="Non" class="card-icon-img">
+                </div>
+                <span class="card-text">Non</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Postal Code Section -->
     <section class="postal-code-section" id="postal-code-section" style="display: none;">
         <h1 class="postal-code-title">Veuillez saisir votre code postal :</h1>
 
@@ -239,28 +259,6 @@
                     <path d="M8 12h8M12 8l4 4-4 4"/>
                 </svg>
             </button>
-        </div>
-    </section>
-    -->
-
-    <!-- Question Section 4 - Telesurveillance (Hidden by default) -->
-    <section class="question-section" id="question-4" style="display: none;">
-        <h1 class="question-title">Souhaitez-vous ajouter la télésurveillance ?</h1>
-
-        <div class="choice-cards">
-            <div class="choice-card" data-choice="oui">
-                <div class="card-icon-wrapper">
-                    <img src="icon/télésurveillance-montpellier.svg" alt="Oui" class="card-icon-img">
-                </div>
-                <span class="card-text">Oui</span>
-            </div>
-
-            <div class="choice-card" data-choice="non">
-                <div class="card-icon-wrapper">
-                    <img src="icon/no-télésurveillance-montpellier.svg" alt="Non" class="card-icon-img">
-                </div>
-                <span class="card-text">Non</span>
-            </div>
         </div>
     </section>
 
