--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -631,6 +631,142 @@
         <div class="carousel-dots" id="carouselDots"></div>
     </section>
 
+    <!-- Statistics Section -->
+    <section class="stats-section">
+        <h2 class="stats-main-title">Votre installateur d'alarme à Montpellier depuis plus de 10 ans</h2>
+
+        <div class="stats-grid">
+            <div class="stat-item">
+                <div class="stat-number" data-target="100" data-suffix="%">0%</div>
+                <p class="stat-description">Satisfaction client garantie</p>
+            </div>
+
+            <div class="stat-item">
+                <div class="stat-number" data-target="1000" data-suffix="+">0+</div>
+                <p class="stat-description">Clients dans l'Hérault nous font confiance</p>
+            </div>
+
+            <div class="stat-item">
+                <div class="stat-number" data-target="15" data-suffix="j">0j</div>
+                <p class="stat-description">Garantie satisfait ou remboursé</p>
+            </div>
+
+            <div class="stat-item">
+                <div class="stat-number" data-target="24" data-suffix="h">0h</div>
+                <p class="stat-description">Installation alarme sous 24h</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section">
+        <div class="faq-container">
+            <div class="faq-left">
+                <h2 class="faq-main-title">Questions fréquentes</h2>
+                <p class="faq-subtitle">Une question ? D'autres l'ont peut-être déjà posée !</p>
+                <a href="#" class="faq-cta-link">Consulter la FAQ</a>
+            </div>
+
+            <div class="faq-right">
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Pourquoi installer un système d'alarme ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Un système d'alarme protège votre habitation ou entreprise contre les cambriolages 24h/7j. Il dissuade les intrus, vous alerte en temps réel en cas d'intrusion et peut être couplé à la télésurveillance pour une intervention rapide. C'est un investissement essentiel pour votre tranquillité d'esprit.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>De quoi se composent les systèmes d'alarme Ajax ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Nos systèmes Ajax incluent : une centrale intelligente, des détecteurs de mouvement avec caméra, des détecteurs d'ouverture pour portes/fenêtres, un clavier de commande, une sirène intérieure et extérieure, et l'application mobile pour le contrôle à distance. Tous les équipements communiquent sans fil de manière sécurisée.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Comment faire avec votre alarme en cas de déménagement ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Nos systèmes sans fil Ajax sont entièrement transportables ! Lors de votre déménagement, nous pouvons désinstaller votre système et le réinstaller dans votre nouveau logement. Contactez-nous pour organiser le transfert de votre installation.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Quelle est la procédure si mon alarme ne marche plus ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Contactez-nous immédiatement par téléphone au 07 67 56 39 26. Notre équipe locale à Montpellier diagnostiquera le problème et interviendra rapidement. La plupart des problèmes sont résolus en moins de 24h.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Pourquoi équiper votre habitation ou entreprise d'un système d'alarme ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Un cambriolage a lieu toutes les 90 secondes en France. Une alarme visible dissuade 95% des cambrioleurs. Elle protège vos biens, votre famille et votre activité professionnelle. De plus, certaines assurances réduisent vos cotisations si vous êtes équipé d'un système d'alarme certifié.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Qu'est-ce que l'application mobile Ajax ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>L'application Ajax vous permet de contrôler votre alarme depuis n'importe où : armer/désarmer le système, recevoir des notifications instantanées, voir l'historique des événements, gérer les utilisateurs et vérifier l'état de tous vos détecteurs. Compatible iOS et Android.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Installez-vous des alarmes sans câble ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Oui, nos alarmes Ajax fonctionnent sur batterie et ne nécessitent aucun câblage. En tant qu'installateur alarme à Montpellier, nous vous garantissons une installation rapide, propre et sans endommager vos murs. Les batteries ont une autonomie exceptionnelle de 5 à 7 ans et sont facilement remplaçables. Le système vous alerte automatiquement lorsque les batteries doivent être changées.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Peut-on ajouter des détecteurs ou des caméras après l'installation initiale ?</span>
+                        <svg class="faq-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Absolument ! Les systèmes Ajax sont totalement évolutifs. Vous pouvez ajouter jusqu'à 150 détecteurs et 10 caméras sur une seule centrale. L'ajout de nouveaux équipements se fait simplement, sans travaux supplémentaires. Nos techniciens peuvent intervenir rapidement pour étendre votre système selon vos besoins : détecteurs de mouvement, détecteurs d'ouverture, caméras, sirènes, etc.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Sticky CTA Button (Desktop Only) -->
     <div class="sticky-cta-bar" id="stickyCTA">
         <div class="sticky-cta-content">
@@ -719,6 +855,72 @@
                 }
             }
         });
+
+        // FAQ Accordion functionality
+        const faqItems = document.querySelectorAll('.faq-item');
+
+        faqItems.forEach(item => {
+            const question = item.querySelector('.faq-question');
+
+            question.addEventListener('click', () => {
+                const isActive = item.classList.contains('active');
+
+                // Close all other FAQ items
+                faqItems.forEach(otherItem => {
+                    if (otherItem !== item) {
+                        otherItem.classList.remove('active');
+                    }
+                });
+
+                // Toggle current item
+                if (isActive) {
+                    item.classList.remove('active');
+                } else {
+                    item.classList.add('active');
+                }
+            });
+        });
+
+        // Statistics Counter Animation
+        function animateCounter(element) {
+            const target = parseInt(element.getAttribute('data-target'));
+            const suffix = element.getAttribute('data-suffix');
+            const duration = 2000; // 2 seconds
+            const steps = 60;
+            const increment = target / steps;
+            let current = 0;
+
+            const timer = setInterval(() => {
+                current += increment;
+                if (current >= target) {
+                    element.textContent = target + suffix;
+                    clearInterval(timer);
+                } else {
+                    element.textContent = Math.floor(current) + suffix;
+                }
+            }, duration / steps);
+        }
+
+        // Intersection Observer for triggering animation when stats come into view
+        const statsObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    const statNumbers = entry.target.querySelectorAll('.stat-number');
+                    statNumbers.forEach(statNumber => {
+                        animateCounter(statNumber);
+                    });
+                    statsObserver.unobserve(entry.target); // Only animate once
+                }
+            });
+        }, {
+            threshold: 0.5 // Trigger when 50% of the section is visible
+        });
+
+        // Observe the stats section
+        const statsSection = document.querySelector('.stats-section');
+        if (statsSection) {
+            statsObserver.observe(statsSection);
+        }
     </script>
 </body>
 </html>
