--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -281,7 +281,7 @@
                     <input type="hidden" name="source" value="Alarme Page Banner">
                     <button type="submit" class="banner-phone-submit">OK</button>
                 </form>
-                <p class="banner-installation-note">* Installation sous 24h</p>
+                <p class="banner-installation-note">* Installation d'alarme sous 24h</p>
             </div>
         </div>
     </div>
@@ -770,10 +770,95 @@
     <!-- Sticky CTA Button (Desktop Only) -->
     <div class="sticky-cta-bar" id="stickyCTA">
         <div class="sticky-cta-content">
-            <span class="sticky-cta-text">Jusqu'au 31 décembre : -50€ sur votre devis • Installation sous 24h</span>
+            <span class="sticky-cta-text">Jusqu'au 31 décembre : -50€ sur votre devis • Installation d'alarme sous 24h</span>
             <a href="devis-alarme.html" class="sticky-cta-button">J'en profite</a>
         </div>
     </div>
+
+    <!-- Footer Section -->
+    <footer class="alarm-footer">
+        <div class="footer-container">
+            <!-- Left Column: Company Info -->
+            <div class="footer-column footer-company">
+                <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité Logo" class="footer-logo">
+                <p class="footer-description">Votre installateur d'alarme de confiance à Montpellier. Plus de 1000 installations réussies depuis 10 ans.</p>
+
+                <div class="footer-contact">
+                    <a href="tel:+33767563926" class="footer-contact-item">
+                        <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                        </svg>
+                        07 67 56 39 26
+                    </a>
+                    <a href="mailto:contact@zozosecurite.fr" class="footer-contact-item">
+                        <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                            <polyline points="22,6 12,13 2,6"/>
+                        </svg>
+                        contact@zozosecurite.fr
+                    </a>
+                </div>
+            </div>
+
+            <!-- Middle Column: Opening Hours -->
+            <div class="footer-column footer-hours">
+                <h3 class="footer-title">Horaires d'ouverture</h3>
+                <div class="hours-list">
+                    <div class="hours-item">
+                        <span class="hours-day">Lundi - Samedi</span>
+                        <span class="hours-time">08:00 - 18:30</span>
+                    </div>
+                    <div class="hours-item">
+                        <span class="hours-day">Dimanche</span>
+                        <span class="hours-time">08:00 - 17:00</span>
+                    </div>
+                </div>
+
+                <h3 class="footer-title" style="margin-top: 2rem;">Navigation</h3>
+                <nav class="footer-nav">
+                    <a href="../index.html" class="footer-nav-link">Accueil</a>
+                    <a href="../services/videosurveillance.html" class="footer-nav-link">Vidéosurveillance</a>
+                    <a href="../interphone-montpellier/installation-interphone-montpellier.html" class="footer-nav-link">Interphone</a>
+                    <a href="installation-alarme-montpellier.html" class="footer-nav-link">Alarme</a>
+                    <a href="../contact.html" class="footer-nav-link">Contact</a>
+                </nav>
+            </div>
+
+            <!-- Right Column: Map -->
+            <div class="footer-column footer-map">
+                <h3 class="footer-title">Notre localisation</h3>
+                <div class="map-container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.949094106266!2d3.8946610762981178!3d43.6284184540332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x49ed7653702ef0fb%3A0xbca1b54e04fc474a!2sZOZO%20S%C3%A9curit%C3%A9%20%7C%20vid%C3%A9osurveillance%20Montpellier%20%7C%20interphone%20%7C%20Alarme!5e0!3m2!1sfr!2sfr!4v1765480432318!5m2!1sfr!2sfr"
+                            width="100%"
+                            height="300"
+                            style="border:0; border-radius: 12px;"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+                <p class="footer-address">
+                    <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                        <circle cx="12" cy="10" r="3"/>
+                    </svg>
+                    Castelnau-le-Lez, Montpellier
+                </p>
+            </div>
+        </div>
+
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <p class="footer-copyright">© 2025 ZOZO Sécurité. Tous droits réservés.</p>
+                <div class="footer-legal">
+                    <a href="../mentions-legales.html" class="footer-legal-link">Mentions légales</a>
+                    <span class="footer-separator">•</span>
+                    <a href="../politique-confidentialite.html" class="footer-legal-link">Politique de confidentialité</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- JavaScript -->
     <script src="alarm.js"></script>
@@ -842,13 +927,16 @@
         // Sticky CTA button functionality
         const stickyCTA = document.getElementById('stickyCTA');
         const heroSection = document.querySelector('.hero-section');
+        const footer = document.querySelector('.alarm-footer');
 
         window.addEventListener('scroll', function() {
-            if (heroSection) {
+            if (heroSection && footer) {
                 const heroBottom = heroSection.offsetTop + heroSection.offsetHeight;
+                const footerTop = footer.offsetTop;
                 const scrollPosition = window.scrollY + window.innerHeight;
 
-                if (window.scrollY > heroBottom) {
+                // Show CTA after hero, but hide when reaching footer
+                if (window.scrollY > heroBottom && scrollPosition < footerTop + 100) {
                     stickyCTA.classList.add('visible');
                 } else {
                     stickyCTA.classList.remove('visible');
