--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -90,7 +90,7 @@
           },
           "areaServed": [
             {
-              "@type": "City",
+              "@type": "City"c,
               "name": "Montpellier"
             },
             {
@@ -519,6 +519,87 @@
                 <div class="label-dot"></div>
             </div>
         </div>
+
+        <!-- Comparison Section -->
+        <h2 class="comparison-title">L'alarme des clients ZOZO Sécurité comparée aux alarmes à installer soi-même**</h2>
+
+        <div class="comparison-container">
+            <!-- Right Column Header -->
+            <div class="diy-alarm-header">Alarme installée soi-même</div>
+
+            <!-- Vertical Red Pill Background -->
+            <div class="vertical-red-pill">
+                <img src="images/installation-alarme-montpellier-logo-comparision-table.png" alt="ZOZO Sécurité Logo" class="vertical-pill-logo">
+            </div>
+
+            <!-- Left Column: Advantage List -->
+            <div class="advantages-list">
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">ÉTUDE DE SÉCURITÉ PROFESSIONNELLE GRATUITE</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">INSTALLATION PROFESSIONNELLE DES COMPOSANTS SOUS 48H</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">CONNEXION 24H/7J AVEC DES AGENTS DE LA CHAMBRE DE TÉLÉSURVEILLANCE</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">PEUT ENVOYER LA POLICE, LES POMPIERS ET LES AMBULANCES EN CAS D'ALARME VÉRIFIÉE</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">ENTRETIEN / MISE À JOUR ANNUEL INCLUS</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">PERSONNALISEZ L'ALARME AVEC LES PRODUITS DONT VOUS AVEZ BESOIN</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">BOUTON SOS RELIÉ À LA CHAMBRE DE TÉLÉSURVEILLANCE</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+                <div class="advantage-item-wrapper">
+                    <div class="advantage-item-background"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-text">OPTION BROUILLARD ANTI-CAMBRIOLAGES ZEROVISION</span>
+                    </div>
+                    <span class="checkmark-single">✓</span>
+                    <span class="redcross-single">✗</span>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Testimonials Section -->
@@ -653,7 +734,7 @@
 
             <div class="stat-item">
                 <div class="stat-number" data-target="24" data-suffix="h">0h</div>
-                <p class="stat-description">Installation alarme sous 24h</p>
+                <p class="stat-description">Installation alarme sous</p>
             </div>
         </div>
     </section>
