making the hero section responsive (buttons, H1, H2 etc...)

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -289,8 +289,25 @@
     <!-- Hero Section -->
     <section class="hero-section" id="hero">
         <div class="hero-content">
+            <!-- Mobile Property Type Selection -->
+            <div class="mobile-property-selection">
+                <h2 class="mobile-selection-title">Que souhaitez-vous protéger ?</h2>
+                <div class="mobile-property-buttons">
+                    <a href="devis-alarme.html" class="mobile-property-btn">
+                        <span>Maison</span>
+                    </a>
+                    <a href="devis-alarme.html" class="mobile-property-btn">
+                        <span>Appartement</span>
+                    </a>
+                    <a href="devis-alarme.html" class="mobile-property-btn">
+                        <span>Entreprise</span>
+                    </a>
+                </div>
+            </div>
+
             <h1 class="hero-main-title">
-                Un cambriolage toutes les <span class="highlight-number">90</span> secondes<br>
+                Un cambriolage toutes<br>
+                les <span class="highlight-number">90</span> secondes<br>
                 Sécurisez votre propriété 24/7<br>
                 Installation rapide<span class="side-note">* sans mensualité et sans engagement</span>
             </h1>
@@ -454,6 +471,11 @@
     <section class="kit-components-section">
         <h2 class="kit-section-title">Une protection complète</h2>
         <p class="kit-section-subtitle">Grâce à notre alarme Ajax sans fil, nous vous protégeons face aux risques du quotidien : tentative d'intrusion, actes de vandalisme, dégagement de fumée, urgence médicale etc.<br>Chaque élément a son rôle essentiel dans la sécurité de votre bien.</p>
+
+        <!-- Mobile Kit Image (Only visible on mobile) -->
+        <div class="kit-mobile-container">
+            <img src="images/kit-alarme-mobile.png" alt="Kit alarme Ajax complet pour protection mobile" class="kit-mobile-image">
+        </div>
 
         <div class="kit-image-container">
             <img src="images/kit-alarme-pour-maison.webp" alt="Kit alarme Ajax complet pour maison" class="kit-main-image">
