--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -306,8 +306,7 @@
             </div>
 
             <h1 class="hero-main-title">
-                Un cambriolage toutes<br>
-                les <span class="highlight-number">90</span> secondes<br>
+                Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span><br>
                 Sécurisez votre propriété 24/7<br>
                 Installation rapide<span class="side-note">* sans mensualité et sans engagement</span>
             </h1>
