making the hero section responsive (buttons, H1, H2 etc...)

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -426,14 +426,14 @@
             <div class="work-card">
                 <img src="images/Détection-instantanée-alarme-montpellier.webp" alt="Détecteurs Ajax sans fil pour alarme maison" class="work-card-image">
                 <h3 class="work-card-title">1. Détection instantanée</h3>
-                <p class="work-card-text">Nos détecteurs Ajax sans fil surveillent votre propriété 24/7. En cas d'intrusion, de mouvement suspect ou d'ouverture de porte/fenêtre, le système détecte immédiatement l'anomalie grâce à ses capteurs intelligents.</p>
+                <p class="work-card-text">Nos détecteurs sans fil surveillent votre propriété 24/7. En cas d'intrusion, de mouvement suspect ou d'ouverture de porte/fenêtre, le système détecte immédiatement l'anomalie grâce à ses capteurs intelligents.</p>
             </div>
 
             <!-- Card 2: Smartphone Alert -->
             <div class="work-card">
                 <img src="images/Application-alarme.webp" alt="Notification alarme Ajax sur smartphone" class="work-card-image">
                 <h3 class="work-card-title">2. Alerte immédiate sur votre smartphone</h3>
-                <p class="work-card-text">Vous recevez une notification push instantanée sur votre téléphone via l'application Ajax. Vous êtes alerté en temps réel, où que vous soyez. Vous pouvez voir exactement quel détecteur s'est déclenché et à quelle heure.</p>
+                <p class="work-card-text">Vous recevez un message instantané sur votre téléphone via l'application Ajax. Vous êtes alerté immédiatement, où que vous soyez. Vous pouvez voir exactement quel détecteur s'est déclenché et à quelle heure.</p>
             </div>
 
             <!-- Card 3: Siren -->
