making the hero section responsive (buttons, H1, H2 etc...)

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -869,10 +869,13 @@
         </div>
     </section>
 
-    <!-- Sticky CTA Button (Desktop Only) -->
+    <!-- Sticky CTA Button -->
     <div class="sticky-cta-bar" id="stickyCTA">
         <div class="sticky-cta-content">
-            <span class="sticky-cta-text">Jusqu'au 31 décembre : -50€ sur votre devis • Installation d'alarme sous 24h</span>
+            <span class="sticky-cta-text">
+                <span class="sticky-text-desktop">Jusqu'au 31 décembre : -50€ sur votre devis • Installation d'alarme sous 24h</span>
+                <span class="sticky-text-mobile">Obtenir son devis gratuit</span>
+            </span>
             <a href="devis-alarme.html" class="sticky-cta-button">J'en profite</a>
         </div>
     </div>
