--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -874,9 +874,12 @@
         <div class="sticky-cta-content">
             <span class="sticky-cta-text">
                 <span class="sticky-text-desktop">Jusqu'au 31 décembre : -50€ sur votre devis • Installation d'alarme sous 24h</span>
-                <span class="sticky-text-mobile">Obtenir son devis gratuit</span>
+                <span class="sticky-text-mobile">Offrez-vous une protection optimale, 24h/24</span>
             </span>
-            <a href="devis-alarme.html" class="sticky-cta-button">J'en profite</a>
+            <a href="devis-alarme.html" class="sticky-cta-button">
+                <span class="button-text-desktop">J'en profite</span>
+                <span class="button-text-mobile">Commencer un devis maintenant</span>
+            </a>
         </div>
     </div>
 
